// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBlockStartWidth renders 0 1`] = `
Array [
  .c0 {
  border-block-start-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders function 1`] = `
Array [
  .c0 {
  border-block-start-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-block-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders negative number 1`] = `
Array [
  .c0 {
  border-block-start-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-block-start-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-block-start-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-block-start-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-block-start-width: July;
}

@media May {
  .c0 {
    border-block-start-width: August;
  }
}

@media April {
  .c0 {
    border-block-start-width: September;
  }
}

@media January {
  .c0 {
    border-block-start-width: November;
  }
}

@media April {
  .c0 {
    border-block-start-width: August;
  }
}

@media June {
  .c0 {
    border-block-start-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: July;
}

@media May {
  .c0 {
    border-block-start-width: August;
  }
}

@media April {
  .c0 {
    border-block-start-width: September;
  }
}

@media January {
  .c0 {
    border-block-start-width: November;
  }
}

@media April {
  .c0 {
    border-block-start-width: August;
  }
}

@media June {
  .c0 {
    border-block-start-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start-width: November;
  }
}

@media April {
  .c0 {
    border-block-start-width: January;
  }
}

@media January {
  .c0 {
    border-block-start-width: December;
  }
}

@media April {
  .c0 {
    border-block-start-width: April;
  }
}

@media June {
  .c0 {
    border-block-start-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start-width: November;
  }
}

@media April {
  .c0 {
    border-block-start-width: January;
  }
}

@media January {
  .c0 {
    border-block-start-width: December;
  }
}

@media April {
  .c0 {
    border-block-start-width: April;
  }
}

@media June {
  .c0 {
    border-block-start-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-block-start-width: July;
  }
}

@media April {
  .c0 {
    border-block-start-width: August;
  }
}

@media January {
  .c0 {
    border-block-start-width: September;
  }
}

@media April {
  .c0 {
    border-block-start-width: November;
  }
}

@media June {
  .c0 {
    border-block-start-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-block-start-width: July;
  }
}

@media April {
  .c0 {
    border-block-start-width: August;
  }
}

@media January {
  .c0 {
    border-block-start-width: September;
  }
}

@media April {
  .c0 {
    border-block-start-width: November;
  }
}

@media June {
  .c0 {
    border-block-start-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start-width: January;
  }
}

@media April {
  .c0 {
    border-block-start-width: December;
  }
}

@media January {
  .c0 {
    border-block-start-width: April;
  }
}

@media April {
  .c0 {
    border-block-start-width: May;
  }
}

@media June {
  .c0 {
    border-block-start-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start-width: January;
  }
}

@media April {
  .c0 {
    border-block-start-width: December;
  }
}

@media January {
  .c0 {
    border-block-start-width: April;
  }
}

@media April {
  .c0 {
    border-block-start-width: May;
  }
}

@media June {
  .c0 {
    border-block-start-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-block-start-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders string 1`] = `
Array [
  .c0 {
  border-block-start-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStartWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderBlockStartWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-block-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
